# beat-vocal-splitter

./: .gitignore  Makefile  README.md  auto.py  download.py  hello.py  log.csv  main.py  pyproject.toml  split_audio.py  url_utils.py  videoUrls.txt
audio_split/: .gitignore  Makefile  auto.py  log.csv  temp.txt  track.txt  videoUrls.txt
audio_split/audio/: SGlBQR-ftVI.opus  aGUQsb31TEw.opus  lXx-kdlxL48.opus  v1ADEPnPt54.opus  y576-ONm5II.opus  z5Jc7KiTLbs.opus
audio_split/split/: list.xlsx
audio_split/vocal-remover/: README.md  train.py
audio_split/vocal_remover/: inference.py
split/: list.xlsx
test/: test_download.py
vocal-remover/: convert.py  inference.py  train.py
